@@ -1591,3 +1591,7 @@ choose an inappropriate visual and display incorrect colors.  (Thanks
 to Oskar Itzinger for debugging the problem.)
 
 Fixed long-standing inaccuracy of pcompos -t and +t thresholding options.
+
+Fixed bug in handling of views with tabs rather than spaces.
+
+Fixed bug related to alias of alias.
